infra/k8s/auth-depl.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 2
  selector:
    matchLabels:
      service: auth
  template:
    metadata:
      labels:
        app: tickets
        service: auth
    spec:
      containers:
        - name: auth
          image: basilnsage/mwn-ticketapp.auth:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: auth-svc
  labels:
    service: auth
spec:
  selector:
    service: auth
  ports:
    - name: auth
      protocol: TCP
      port: 4000
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-np
spec:
  selector:
    service: auth
  ports:
    - name: auth-np
      port: 4000
      targetPort: 4000
  type: NodePort
...
