infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      service: auth-mongo
  template:
    metadata:
      labels:
        app: tickets
        service: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo
          resources:
            limits:
              memory: 256Mi
              cpu: 500m 
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-svc
spec:
  selector:
    service: auth-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
