infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      service: client
  template:
    metadata:
      labels:
        app: tickets
        service: client
    spec:
      containers:
        - name: client
          image: basilnsage/mwn-ticketapp.client:latest
          imagePullPolicy: Never
          resources:
            limits:
              memory: 256Mi
              cpu: 500m 
---
apiVersion: v1
kind: Service
metadata:
  name: client-svc
spec:
  selector:
    service: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
