infra/k8s/grafana-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    service: grafana
  ports:
    - name: grafana
      port: 3000
      targetPort: 3000
  type: NodePort
...
