infra/k8s/orders-depl.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      service: orders
  template:
    metadata:
      labels:
        app: tickets
        service: orders
    spec:
      containers:
        - name: orders
          image: basilnsage/mwn-ticketapp.orders:latest
          resources:
            limits:
              memory: 128Mi
              cpu: 125m 
---
apiVersion: v1
kind: Service
metadata:
  name: orders-svc
  labels:
    service: orders
spec:
  selector:
    service: orders
  ports:
    - name: orders
      protocol: TCP
      port: 4000
      targetPort: 4000
...
