infra/k8s/orders-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      service: orders-mongo
  template:
    metadata:
      labels:
        app: tickets
        service: orders-mongo
    spec:
      containers:
        - name: orders-mongo
          image: mongo
          resources:
            limits:
              memory: 256Mi
              cpu: 500m 
---
apiVersion: v1
kind: Service
metadata:
  name: orders-mongo-svc
spec:
  selector:
    service: orders-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
...
